styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

* {
  box-sizing: border-box;
}

@layer base {
  a {
    color: inherit;
    text-decoration: none;
  }

  body {
    @apply bg-primary-dark min-h-screen w-full;
  }

  button {
    @apply outline-none;
  }

  button:disabled {
    @apply bg-gray-600 cursor-not-allowed hover:bg-gray-600
  }
}

@layer components {
  .red-frame {
    @apply border-2 border-solid border-red-400 flex justify-center items-center rounded-sm py-1  px-1
  }

  .yellow-frame {
    @apply border-2 border-solid border-yellow-400 flex justify-center items-center rounded-sm py-1 px-1
  }

  .text-gray-color {
    @apply text-gray-600
  }

  .link-blur-color {
    @apply text-blue-400
  }

  .bubble {
    @apply absolute text-sm bg-primary-light block rounded-sm py-1 px-3 text-black
  }

  .form-checkbox:checked + span {
    @apply bg-primary-dark border-transparent
  }

  .btn-submit {
    @apply w-full uppercase rounded-md hover:bg-primary px-6 py-2 hover:text-white tracking-wider font-semibold
    focus:outline-none bg-primary-light transition duration-100 text-black sm:w-auto sm:self-end shadow-md
  }

  .absolute-main {
    @apply absolute top-0 left-0 pt-60 sm:pt-40 z-10
  }

  .min-screen {
    @apply min-h-screen min-w-full
  }

  .full {
    @apply h-full w-full
  }

  .flex-center {
    @apply flex items-center justify-center
  }

  .btn {
    @apply py-2 rounded-md px-4 transition delay-100 text-white
  }

  .btn-success {
    @apply bg-primary-light hover:bg-primary focus:bg-primary
  }

  .btn-danger {
    @apply bg-red-500 hover:bg-red-700 focus:bg-red-700
  }

  .input {
    @apply border border-solid border-gray-400 block py-2 px-2 rounded-md
    focus:outline-none focus:border-primary-light shadow-md
  }
}

.lds-dual-ring {
  display: inline-block;
  width: 80px;
  height: 80px;
}

.lds-dual-ring:after {
  content: " ";
  display: block;
  width: 64px;
  height: 64px;
  margin: 8px;
  border-radius: 50%;
  border: 6px solid #fff;
  border-color: #fff transparent #fff transparent;
  animation: lds-dual-ring 1.2s linear infinite;
}

@keyframes lds-dual-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.custom-scrollbar::-webkit-scrollbar {
  width: 7px;
  background-color: #f9f9fd;
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  background-color: #c2c2c4;
}

